--- a/public_html/index.html
+++ b/public_html/index.html
@@ -71,9 +71,13 @@ color: #4444aa;
 a:visited {
 color: #222288;
 }
+cs {
+padding: 4px;
+}
 code {
 font-family: Menlo, Monaco, 'Lucida Console', Consolas, monospace;
 font-size: 85%;
+padding:4px;
 margin: 0;
 background-color: #eee;
 }
@@ -115,7 +119,7 @@ overflow-wrap: normal;
 .sourceCode {
 background-color: #eee;
 overflow: visible;
-padding: 4px;
+padding: 0px;
 }
 hr {
 background-color: #1a1a1a;
@@ -162,7 +166,7 @@ padding-left: 0;
 #TOC a:not(:hover) {
 text-decoration: none;
 }
-code{white-space: pre-wrap;}
+code{white-space: pre-wrap;padding:4px;}
 span.smallcaps{font-variant: small-caps;}
 span.underline{text-decoration: underline;}
 div.column{display: inline-block; vertical-align: top; width: 50%;}
@@ -173,7 +177,7 @@ pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
 .sourceCode { overflow: visible; }
 code.sourceCode > span { color: inherit; text-decoration: inherit; }
-div.sourceCode { margin: 1em 0; }
+div.sourceCode { margin: 1em 0; padding:4px; }
 pre.sourceCode { margin: 0; }
 @media screen {
 div.sourceCode { overflow: auto; }
@@ -238,8 +242,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } </style>
 </header>
 <h2 id="about">About</h2>
 <p>Hello! I do appsec stuff, and also like making/playing games, Russian
-language, and reading fantasy and sci-fi. Contact me at first dot lаst
-аt gmаil.</p>
+language, math and reading fantasy and sci-fi. Contact me at first dot
+lаst аt gmаil.</p>
 <h2 id="security-research">Security research</h2>
 <ul>
 <li><p><a href="posts/predicting-system-dot-random">Predicting .NET’s
