Adding parameter confusion post

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -245,6 +245,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } </style>
 first dot lаst аt gmаil with questions or comments.</p>
 <h2 id="security-research">Security research</h2>
 <ul>
+<li><p><a href="posts/parameter-confusion-aspnet-48">Parameter confusion
+in ASP.NET Framework 4.8 (2025)</a><br />
+Discussion of an unexpected behavior with route parameters in ASP.NET
+Framework that can lead to security vulnerabilities.</p></li>
 <li><p><a href="posts/predicting-system-dot-random">Predicting .NET’s
 System.Random (Xoshiro256**) output (2024)</a><br />
 Development of a proof of concept exploit for predicting the next output
